# 21vek

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check.yml  pipeline.yml
src/: alembic.ini
src/app/: service.py
src/app/api/: routes.py
src/app/api/contents/: handler.py  hundler.py  schemas.py
src/app/api/news/: hundler.py  shemas.py
src/app/decorators/: log_result.py
src/app/models/: content.py  news.py
src/app/services/: contens_crud.py  contents_crud.py
src/app/storages/: database.py  tables.py
src/app/utils/cache/: cache.py
src/app/utils/decorators/: log_result.py
src/migrations/: env.py
src/migrations/versions/: 5cc8b3759e3c_create_table.py
src/tools/: docker-compose.yml
