[tool.poetry]
name = "21vek"
version = "0.1.0"
description = ""
authors = ["shedko <v.shedko@kpedev.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.114.0"
alembic = "^1.13.2"
uvicorn = "^0.30.6"
pydantic = "^2.0"
asyncpg = "^0.29.0"
fastapi-cache2 = "^0.2.2"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
